--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
+<title>Login Page</title>
 <body><center>
-<form action="/auth" method='post'>
+<form action="/auth" method='POST'>
 Username: <input type="text" name="usr" placeholder="Enter your username">
 <br><br>
 Password: <input type="text" name="pw" placeholder="Enter your password">
 <br><br>
-<input type="submit" name="sub">
+<input type="submit" value="Login">
 <br><br><br>
-<font color="white">
-Username : Mario
-<br><br>
-Password : 12345
-</font>
-</center>
 </form>
+<form action="/registerNew" method='POST'>
+<input type="submit" value="Register">
+</form>
+</center>
 </html>
