--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Register New Account</title>
 <body>
 <form action="/register" method='POST'>
 <center>
@@ -7,8 +8,11 @@ Username: <input type="text" name="usr" placeholder="Your User Name">
 <br><br>
 Password: <input type="text" name="pw" placeholder="Your Password">
 <br><br>
-<input type="submit" value="Submit">
-</center>
+<input type="submit" value="Create Account">
+</form><br><br><br>
+<form action="/">
+<input type="submit" value="Back to Login">
 </form>
+</center>
 </body>
 </html>
