Basic working version

--- a/templates/common.html
+++ b/templates/common.html
@@ -3,7 +3,7 @@
 <html><body>
 <center>
 {{mes}}<br><br>
-<form action={{p}}, method={{m}}>
+<form action={{p}} method={{m}}>
 <input type="submit" value={{b}}>
 </form>
 </center>
